@@ -1,31 +1,15 @@
 #!/bin/bash
 
-# this just allows me to change vm args through git
+wget --no-check-certificate --header="Host: jenkins.daporkchop.net" https://10.0.0.21/job/Minecraft/job/2p2e/job/NukkitX/job/master/lastSuccessfulBuild/artifact/target/nukkit-1.0-SNAPSHOT.jar
 
-#-XX:+UseG1GC \
-
-java \
--XX:+UseConcMarkSweepGC \
--XX:+UseParNewGC \
--XX:+UseNUMA \
--XX:+CMSParallelRemarkEnabled \
--XX:MaxTenuringThreshold=15 \
+java -Xmx3G -Xms1G \
+-XX:+UseG1GC \
+-Dsun.rmi.dgc.server.gcInterval=2147483646 \
+-XX:+UnlockExperimentalVMOptions \
 -XX:MaxGCPauseMillis=50 \
--XX:GCPauseIntervalMillis=150 \
--XX:+UseAdaptiveGCBoundary \
--XX:-UseGCOverheadLimit \
--XX:+UseBiasedLocking \
--XX:SurvivorRatio=8 \
--XX:TargetSurvivorRatio=90 \
--XX:MaxTenuringThreshold=15 \
--XX:+UseFastAccessorMethods \
--XX:+UseCompressedOops \
--XX:+OptimizeStringConcat \
+-XX:G1HeapRegionSize=16M \
 -XX:+AggressiveOpts \
--XX:ReservedCodeCacheSize=512M \
--XX:+UseCodeCacheFlushing \
--XX:SoftRefLRUPolicyMSPerMB=10000 \
--XX:ParallelGCThreads=3 \
--Xmx3G \
--Xms256M \
+-XX:+AlwaysPreTouch \
+-XX:+UseLargePagesInMetaspace \
+-XX:ConcGCThreads=3 \
 -jar nukkit-1.0-SNAPSHOT.jar
